# minishell

./: README.md
Misha/: .backslash.c.swp  CMakeLists.txt  a.out  backslash.c  executing.c  file  file.lol  get_normal_form.c  history.h  kek  kek.lol  kek.txt  libft_utills.c  lol  lol.kek.lol  lol.txt  main.c  minishell  minishell.h  parser.c  parser.h  pretokenizer_handler.c  quotes_handler.c  script.sh  syntax_err.c  thatfile  thisfile  tokenizer_functions.c  tokens_handler.c
Misha/U/: check_for_exit.c  history1.h  keys.c  keys2.c  term_utills.c
Misha/a.out.dSYM/Contents/Resources/DWARF/: a.out
Misha/backup/: libft_utills_export.c  pretokenizer_handler.c
Misha/builtins/: .builtins.h.swp  built1.c  builtins.h  cd.c  cd_utils.c  check_export.c  echo.c  env.c  env_alpha.c  exit.c  export.c  export_utills.c  is_builtin.c  libft_utills_export.c  manage_duplications.c  pwd.c  pwd_cd.c  unset.c
Misha/executing/: change_io.c  child_process.c  executing.c  executing.h  executing_utils.c  free_and_exit.c  free_functions.c  kern.c  waiting_childs.c
Misha/minishell_utils/: ft_itoa.c  ft_split.c  memory_handle_utils.c  minishell_utils.h  string_utils1.c  string_utils2.c  string_utils3.c  string_utils4.c
Misha/parser/: backslash.c  parser.c  parser.h  quotes_handler.c  redirects_syntax.c  syntax_err.c
Misha/polygon/: a.out  executing.c
Misha/termcap/: check_for_exit.c  keys.c  keys2.c  term_utills.c  termcap.h
Misha/tokenizer/: check_cmd.c  check_directory.c  cmd.c  conditions.c  conditions_utils.c  dollar_sign_assign.c  dollar_sign_cnt.c  free_and_exit_tokenizer.c  get_redirect.c  redirect_error.c  redirects.c  tokenizer.h
U/: Makefile  a.out  check_for_exit.c  export_unset.c  history.h  input.c  kek.kek  keys.c  keys2.c  libft_utills.c  main.c  term_utills.c
